# HHCAMP-Lifepulse

./: .gitignore  README.md  TXT.txt
ProjetIA/: app.py  history.json  history.py  main.py  pyproject.toml
ProjetIA/logic/: medecin_logic.py  patient_logic.py
ProjetIA/models/: conversation_agent.py  generate_dataset.py  lifepulse_model.py  lifepulse_pipeline.py
ProjetIA/models/chatbot/: inference.py  train.py
ProjetIA/models/nlp/: classifier.py  extractor.py
ProjetIA/models/scoring/: frequency.py
ProjetIA/src/: data.py  extractor.py  utils.py
ProjetIA/static/: style.css
ProjetIA/templates/: home.html  patient.html
backend/: history.json  pyproject.toml
backend/ProjetIA/: app.py  history.json  history.py
backend/ProjetIA/Data/: MTMV document de travail EV CD VRT MM revu 28 01 2022.xlsx  synthetic_dataset.csv
backend/ProjetIA/models/chatbot/: dataset.json
backend/ProjetIA/src/: data.py  extractor.py  utils.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py  event.py  history.py  patient.py
backend/app/services/: ai_service.py  event_service.py  history_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  router.jsx  style.css
frontend/src/components/: BottomNav.jsx  Chat.jsx  CommunityCard.jsx  HealthCard.jsx  ProgramCard.jsx  Timeline.jsx
frontend/src/components/ui/: Avatar.jsx  BottomNav.jsx  Card.jsx
frontend/src/pages/: Aidant.jsx  Login.jsx  Patient.jsx  Pro.jsx
frontend/src/services/: api.js
frontend/src/styles/: theme.css
(+9 files in other folders)
