[project]
name = "lifepulse"
version = "0.1.0"
description = "LifePulse app"
requires-python = ">=3.12"

dependencies = [
    "flask",
    "pandas",
    "numpy",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "openpyxl>=3.1.5",
    "peft>=0.18.1",
]

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel"
]
